# sisges-showcase

./: .env.example  .env.mysql.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alembic.ini  pyproject.toml
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
docs/: ALGORITMO_FOLHA_MODELO_PDF.md  ALGORITMO_FOLHA_SEMI_OK_PARTE1.md  ALGORITMO_PARTE1_GPT_ASSISTIDO.md  AUDITORIA_TIPOS_MYSQL.md  BLUE_TEAM_HARDENING_SISGES_README.md  CHECKLIST_OPERADOR_FOLHAS.md  COMPILADOR_FOLHAS_ALTERACOES_PROCESSO.md  CONTRATO_FORMATACAO_FOLHA_REFERENCIA_VISUAL.md  DECLARACOES_MODELOS_OPERACIONAIS.md  ERROS_E_HOTFIX_FOLHAS.md  EXECUCAO_LOCAL_LAN_SISGES.md  FECHAMENTO_TECNICO_FOLHAS_ALTERACOES.md  FLUXO_RAPIDO_ENTREGA_FOLHAS.md  HANDOFF_FRONTEND_SISGES.md  HOMOLOGACAO_FRONTEND_COMPILADOR.md  INGESTAO_PASTA_SECRETARIA_LANCAMENTO.md  MODULO_TAREFAS_ARQUITETURA.md  NGINX_HARDENING_SISGES.md  PLANO_EVOLUCAO_MYSQL_CLEAN_ARCH.md  PLANO_MIGRACAO_MYSQL_SEGURA.md  SANEAMENTO_HISTORICO_GIT_FASE1.md  SANEAMENTO_HISTORICO_GIT_FASE2.md  SECURITY_LOGGING_SISGES.md  SECURITY_PREFLIGHT_SISGES.md  VALIDACAO_OVERCLOCK_SISGES.md  VALIDACAO_UX_UI_OVERCLOCK_SISGES.md  analise_projeto_sisges.md  arquitetura.md  decisoes_tecnicas.md  gestao_pessoal_pdf_antiguidade.md  reconstrucao_backend_fase1.md  reconstrucao_backend_fase2.md  reconstrucao_backend_fase3.md  reconstrucao_backend_fase4.md  reconstrucao_backend_fase5.md  reconstrucao_backend_fase6.md  reconstrucao_backend_fase7.md  reconstrucao_backend_fase8.md  requisitos.md  roadmap.md
(+308 files in other folders)
