[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sisges"
version = "0.1.0"
description = "SisGeS - Sistema de Gerenciamento de Secretaria"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "jinja2>=3.1",
  "pdfplumber>=0.11",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "pymysql>=1.1",
  "itsdangerous>=2.2",
  "email-validator>=2.2"
]

[project.optional-dependencies]
dev = [
  "alembic>=1.13",
  "httpx>=0.27",
  "pytest>=8.2",
  "ruff>=0.5"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "apps*",
  "modules*",
  "shared*",
  "infra*"
]
exclude = [
  "tests*",
  "docs*",
  "data*",
  "logs*",
  "scripts*"
]

[tool.setuptools.package-data]
"apps.web" = [
  "templates/*.html",
  "static/favicon.ico",
  "static/css/*.css",
  "static/js/*.js",
  "static/img/*"
]
